--- a/galleryindex.html
+++ b/galleryindex.html
@@ -44,152 +44,146 @@
 
 
 
-    <div class="full-screen-portfolio" id="portfolio">
-        <div class="container-fluid">
-
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="./assets/img/big_portfolio_item_4.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Biodiesel <em>squid</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
+    <div class="grid-portfolio" id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/nevado.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Colima' <em>Snow Park</em></h1>
+                                    <p>High Performance Camp</p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/nevado.jpg">
                             </div>
                         </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_4.png">
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/reunited.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Chinese <em>Cultural Showcase</em></h1>
+                                    <p>Chinese Culture - Shaolin Martin Arts</p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/reunited.jpg">
+                            </div>
                         </div>
-                    </div></a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/nunc.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Off<em>light</em></h1>
+                                    <p>Just for the record, nunchaku included</p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/nunc.jpg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/tiger.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Tiger <em>Fist</em></h1>
+                                    <p>Tiger Claw Technique and Movement</p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/tiger.jpg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/everyone.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Tao Shen Kwoon <em>Cultural Centre</em></h1>
+                                    <p>Inaugural Sede Event </p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/everyone.jpg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/kick.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Show<em>case</em></h1>
+                                    <p>Just an Exhibition Fight</p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/kick.jpg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/taicdmx.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1 style="color: #ac2925">Unidos por el <em>Taichi</em></h1>
+                                    <p style="color: #ac2925">First annual meeting - Disciplines from México</p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/taicdmx.jpg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/crimi2.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Criminalistics <em> Practice</em></h1>
+                                    <p>First Criminalistics Practice </p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/crimi2.jpg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="./assets/img/crimi.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Ballistics <em>Expert</em></h1>
+                                    <p>Criminalistics newbie team</p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="./assets/img/crimi.jpg">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="./assets/img/big_portfolio_item_2.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>raclette <em>taxidermy</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_2.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="./assets/img/big_portfolio_item_3.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>humblebrag <em>brunch</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_3.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="./assets/img/big_portfolio_item_1.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Succulents <em>chambray</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_1.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="./assets/img/big_portfolio_item_5.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>freegan <em>aesthetic</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_5.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="./assets/img/big_portfolio_item_6.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>taiyaki <em>vegan</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_6.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="./assets/img/big_portfolio_item_7.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Thundercats <em>santo</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_7.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="./assets/img/big_portfolio_item_8.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>wayfarers <em>yuccie</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_8.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-            	<div class="portfolio-item">
-                	<a href="./assets/img/big_portfolio_item_9.png" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>disrupt <em>street</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="./assets/img/portfolio_item_9.png">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
 
         </div>
     </div>
@@ -198,8 +192,8 @@
     <footer>
         <div class="container-fluid">
             <div class="col-md-12">
-                <p class="small tm-copyright-text" style="font-size: small; font-family: 'Megrim', cursive"> © <span class="tm-current-year">2021</span> Mario B. Santana/Mao All Rights Reserved.
-    | Designed by TemplateMo</p>
+                <p class="small tm-copyright-text" style="font-size: small; font-family: 'Megrim', cursive"> © <span class="tm-current-year">2021</span> Mario B. Santana | Mao All Rights Reserved.
+     </p>
             </div>
         </div>
     </footer>
