--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
     </p>
     <p class="text col-12">
         Interested ? You can see my experience here:
-        <a href="./RESUMEBSMJ.pdf" target="_blank" style="color: #210124">
+        </p>
+        <a href="./certificates/RESUMEBSMJ.pdf" target="_blank" style="color: #210124">
             <i class="fas fa-file"></i>
             <span style="font-weight:bold">CV</span>
-        </a>.
+        </a>
+        <p>
         <a href="https://drive.google.com/drive/folders/10H0BGW2ZUAMc6eIG0nAc_k4pD8Q6QUtl?usp=sharing" target="_blank" style="color: #210124">
             <i class="fas fa-certificate"></i>
             <span style="font-weight:bold">Certificates</span>
