--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <span style="font-weight:bold">CV</span>
         </a>
         <p>
-        <a href="https://drive.google.com/drive/folders/10H0BGW2ZUAMc6eIG0nAc_k4pD8Q6QUtl?usp=sharing" target="_blank" style="color: #210124">
+        <a href="./certificates/academic.pdf" target="_blank" style="color: #210124">
             <i class="fas fa-certificate"></i>
             <span style="font-weight:bold">Certificates</span>
         </a>.
