--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <!--     nav bar -->
     <div class="navbar">
 
-        <ul style="padding-left: 0px;">
 
-            <li class="logo"> <img src="assets/img/logo.png" height="58" width="60">   </li>
+
+           <li class="logo" style="padding-left: 20px;padding-top: 10px "> <img src="assets/img/logo.png" height="58" width="60"> </li>
 
             <section class="div_navbar_items">
                 <li class="navbar_items"> <a href="#canvas"> Home </a> </li>
@@ -54,7 +54,7 @@
 </div>
 <!--         closing navbar  -->
 
-<!--Mobile NAVBAR-->
+
 
 <!-- Hero -->
 
