--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 									<div class="projects">
 
-										<a href="gallery.html" style="text-decoration: none" target="_blank">
+										<a href="./gallery/gallery.html" style="text-decoration: none" target="_blank">
 										<div class="card">
 											<img src="./assets/css/images/galleryimg.png" />
 											<h3>Gallery</h3>
