--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
 									<span style="font-weight:bold">@alleytopcat</span>
 								</a>
 
-								<!--<a href="https://taoshenkwoon.com/" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #330033">
+								<a href="https://taoshenkwoon.com/" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #330033">
+									<br>
 									<i class="fas fa-yin-yang"></i>
 									<span style="font-weight:bold" >/TaoShenKwoon</span>
-								</a>-->
+								</a>
 							</header>
 						</article>
 
