--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<nav id="nav">
 						<a href="#" class="icon solid fas fa-home"><span>About Me</span></a>
 						<a href="#skills" class="icon solid fas fa-user"><span>Skills</span></a>
-						<a href="#work" class="icon solid fa-folder"><span style="font-weight: bold">Projects</span></a>
+						<a href="#work" class="icon solid fas fa-save"><span style="font-weight: bold">Projects</span></a>
 						<a href="#contact" class="icon solid fas fa-address-book"><span>Contact</span></a>
 					</nav>
 
