--- a/index.html
+++ b/index.html
@@ -148,28 +148,28 @@
 										<a href="./gallery/gallery.html" style="text-decoration: none" target="_blank">
 										<div class="card">
 											<img src="./assets/css/images/galleryimg.png" />
-											<h3>Gallery</h3>
+											<p class="card__paragraph">Gallery</p>
 										</div>
 										</a>
 
 										<a href="https://netflixmx-a59d4.web.app/" style="text-decoration: none" target="_blank">
 										<div class="card">
 											<img src="./assets/css/images/NETFLIXH.png" />
-											<h3>Netflix Clon</h3>
+											<p class="card__paragraph">Netflix Clon</p>
 										</div>
 										</a>
 
 										<a href="http://www.agnajcr.com/" style="text-decoration: none" target="_blank">
 										<div class="card">
 											<img src="./assets/css/images/JCRH.png" />
-											<h3>Naviera JCR</h3>
+											<p class="card__paragraph">Naviera JCR</p>
 										</div>
 										</a>
 
 										<a href="https://maooldsite.web.app/" style="text-decoration: none" target="_blank">
 											<div class="card">
 												<img src="./assets/css/images/oldsite.png" />
-												<h3>Old Site</h3>
+												<p class="card__paragraph">Old Site</p>
 											</div>
 										</a>
 
