--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<p>
 									<a href="./certificates/academic.pdf" target="_blank" style="color: #210124">
 										<i class="fas fa-certificate"></i>
-										<span style="font-weight:bold">Certificates</span>
+										<span style="font-weight:bold">Credentials</span>
 									</a>.
 								</p>
 								<p class="text col-18">
