--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 
 
 <html>
@@ -170,6 +165,13 @@
 											<div class="card">
 												<img src="./assets/css/images/oldsite.png" />
 												<p class="card__paragraph">Old Site</p>
+											</div>
+										</a>
+
+										<a href="https://inkvocations.web.app/" style="text-decoration: none" target="_blank">
+											<div class="card">
+												<img src="./assets/css/images/inkv.png" />
+												<p class="card__paragraph">I N K V O C A T I O N</p>
 											</div>
 										</a>
 
