--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@
 									<i class="fab fa-twitter"></i>
 									<span style="font-weight:bold">@alleytopcat</span>
 								</a>
-
+									<br>
 								<a href="https://www.instagram.com/alleytopcat" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #330033">
 									<i class="fab fa-instagram"></i>
 									<span style="font-weight:bold">@alleytopcat</span>
 								</a>
-
+								<br>
 								<a href="https://taoshenkwoon.com/" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #330033">
-									<br>
 									<i class="fas fa-yin-yang"></i>
 									<span style="font-weight:bold" >/TaoShenKwoon</span>
 								</a>
@@ -173,6 +172,12 @@
 												<img src="./assets/css/images/inkv.png" />
 												<p class="card__paragraph">I N K V O C A T I O N</p>
 											</div>
+
+											<a href="https://faketokmx.web.app/" style="text-decoration: none" target="_blank">
+												<div class="card">
+													<img src="./assets/css/images/faketok.png" />
+													<p class="card__paragraph"><br>React Practice/Web Only</p>
+												</div>
 										</a>
 
 									</div>
@@ -191,8 +196,10 @@
 								</div>
 								<div class="data col-10 col-md-2 col-lg-3">
 									<a href="https://goo.gl/maps/f4K4uQPpyHhMUsdX6" target="_blank">Zlo,México</a>
-									<a href="mailto:donmaoccio@icloud.com" target="_blank">donmaoccio@icloud.com</a>
-									<!--<a href="tel:+3121239455" target="_blank">+52 3121239455</a>-->
+									<br>
+									<a href="mailto:donmaoccio@icloud.com" target="_blank">alleytopcat@gmail.com</a>
+									<br>
+									<a href="tel:3143380522" target="_blank">+52 3143380522</a>
 									<br>
 									<br>
 
@@ -202,7 +209,7 @@
 									<a href="https://twitter.com/alleytopcat" target="_blank" class="fab fa-twitter"></a>
 									<a href="https://www.linkedin.com/in/besmao/" target="_blank" class="fab fa-linkedin"></a>
 									<a href="https://www.instagram.com/alleytopcat" target="_blank" class="fab fa-instagram"></a>
-									<a href="https://github.com/donmaoccio" target="_blank" class="fab fa-github"></a>
+									<a href="https://github.com/alleytopcat" target="_blank" class="fab fa-github"></a>
 									<a href="https://www.freecodecamp.org/donmaoccio" target="_blank" class="fab fa-free-code-camp"></a>
 								</div>
 							</article>
