--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 								<div class="data col-10 col-md-2 col-lg-3">
 									<a href="https://goo.gl/maps/f4K4uQPpyHhMUsdX6" target="_blank">Zlo,México</a>
 									<br>
-									<a href="mailto:donmaoccio@icloud.com" target="_blank">alleytopcat@gmail.com</a>
+									<a href="mailto:mario@prrrgrammer.org" target="_blank">mario@prrrgrammer.org</a>
 									<br>
 									<a href="tel:3143380522" target="_blank">+52 3143380522</a>
 									<br>
@@ -209,7 +209,7 @@
 									<a href="https://twitter.com/alleytopcat" target="_blank" class="fab fa-twitter"></a>
 									<a href="https://www.linkedin.com/in/besmao/" target="_blank" class="fab fa-linkedin"></a>
 									<a href="https://www.instagram.com/alleytopcat" target="_blank" class="fab fa-instagram"></a>
-									<a href="https://github.com/alleytopcat" target="_blank" class="fab fa-github"></a>
+									<a href="https://github.com/purrgat6ry" target="_blank" class="fab fa-github"></a>
 									<a href="https://www.freecodecamp.org/donmaoccio" target="_blank" class="fab fa-free-code-camp"></a>
 								</div>
 							</article>
