--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 									<span style="font-weight:bold">@alleytopcat</span>
 								</a>
 									<br>
-								<a href="https://www.instagram.com/alleytopcat" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #330033">
+								<a href="https://www.instagram.com/prrrgat6ry" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #330033">
 									<i class="fab fa-instagram"></i>
-									<span style="font-weight:bold">@alleytopcat</span>
+									<span style="font-weight:bold">@prrrgat6ry</span>
 								</a>
 								<br>
 								<a href="https://taoshenkwoon.com/" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #330033">
@@ -198,6 +198,8 @@
 									<a href="https://goo.gl/maps/f4K4uQPpyHhMUsdX6" target="_blank">Zlo,México</a>
 									<br>
 									<a href="mailto:mario@prrrgrammer.org" target="_blank">mario@prrrgrammer.org</a>
+									<br>
+									<a href="mailto:purrgat6ry@gmail.org" target="_blank">purrgat6ry@gmail.org</a>
 									<br>
 									<a href="tel:3143380522" target="_blank">+52 3143380522</a>
 									<br>
