--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 								<div class="social col-10 col-md-5 col-lg-3">
 									<a href="https://twitter.com/alleytopcat" target="_blank" class="fab fa-twitter"></a>
 									<a href="https://www.linkedin.com/in/besmao/" target="_blank" class="fab fa-linkedin"></a>
-									<a href="https://www.instagram.com/alleytopcat" target="_blank" class="fab fa-instagram"></a>
+									<a href="https://www.instagram.com/prrrgat6ry" target="_blank" class="fab fa-instagram"></a>
 									<a href="https://github.com/purrgat6ry" target="_blank" class="fab fa-github"></a>
 									<a href="https://www.freecodecamp.org/donmaoccio" target="_blank" class="fab fa-free-code-camp"></a>
 								</div>
